@@ -12,5 +12,9 @@
     <input class="textfield" size="40" type="text" value="text 2"/>
     <input class="textfield" size="40" type="text" value="text 3"/>
 
+    <input class="hiddenfield" size="40" type="hidden" value="hidden 1"/>
+    <input class="hiddenfield" size="40" type="hidden" value="hidden 2"/>
+    <input class="hiddenfield" size="40" type="hidden" value="hidden 3"/>
+
   </body>
 </html>
