@@ -40,6 +40,12 @@ describe PageObject::ElementLocators do
       element = watir_page_object.hidden_field_element(:id => 'blah')
       element.should be_instance_of PageObject::Elements::HiddenField
     end
+
+    it "should find all hidden field elements" do
+      watir_browser.should_receive(:hiddens).with(:id => 'blah').and_return([watir_browser])
+      elements = watir_page_object.hidden_field_elements(:id => 'blah')
+      elements[0].should be_instance_of(PageObject::Elements::HiddenField)
+    end
     
     it "should find a text area element" do
       watir_browser.should_receive(:textarea).with(:id => 'blah').and_return(watir_browser)
@@ -206,6 +212,13 @@ describe PageObject::ElementLocators do
       selenium_browser.should_receive(:find_element).with(:id, 'blah').and_return(selenium_browser)
       element = selenium_page_object.hidden_field_element(:id => 'blah')
       element.should be_instance_of PageObject::Elements::HiddenField
+    end
+
+    it "should find all hidden field elements" do
+      selenium_browser.should_receive(:find_elements).with(:id, "blah").and_return([selenium_browser])
+      elements = selenium_page_object.hidden_field_elements(:id => 'blah')
+      elements[0].should be_instance_of PageObject::Elements::HiddenField 
+
     end
     
     it "should find a text area element" do
